--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,12 @@ notifications:
     on_failure: always
 sudo: false             # faster builds as long as you don't need sudo access
 before_install:
-  - eval $(curl https://travis-perl.github.io/init) --auto
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init
+  - build-perl
+  - perl -V
+script:
+  - "prove -lr t"
 matrix:
   allow_failures:
     - perl: blead       # ignore failures for blead perl
